[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Hub.gd" type="Script" id=1]
[ext_resource path="res://Scenes/System.tscn" type="PackedScene" id=2]

[node name="Hub" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 1.00441, 1.01262 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="SystemButton" type="Button" parent="."]
margin_left = 153.0
margin_top = 74.0
margin_right = 334.0
margin_bottom = 191.0
text = "SYSTEM"

[node name="SecurityButton" type="Button" parent="."]
margin_left = 128.0
margin_top = 416.0
margin_right = 309.0
margin_bottom = 533.0
text = "SECURITY"

[node name="WeatherButton" type="Button" parent="."]
margin_left = 776.0
margin_top = 416.0
margin_right = 957.0
margin_bottom = 533.0
text = "WEATHER"

[node name="Button2" type="Button" parent="."]
margin_left = 776.0
margin_top = 64.0
margin_right = 957.0
margin_bottom = 181.0
disabled = true
text = "SISTEMA"

[node name="System" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 0.0
rect_scale = Vector2( 1e-05, 1e-05 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PerformanceLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "60"

[node name="DateLabel" type="Label" parent="."]
margin_left = 967.0
margin_top = 3.0
margin_right = 1023.0
margin_bottom = 17.0
text = "00:00:00"

[connection signal="pressed" from="SystemButton" to="." method="_on_system_button_pressed"]
[connection signal="pressed" from="SecurityButton" to="." method="_on_security_button_pressed"]
[connection signal="pressed" from="WeatherButton" to="." method="_on_weather_button_pressed"]
